# cpuminer-neoscrypt

./: .gitignore  Makefile.am  README  blake2s_sidm.c  chacha_20_sidm.c  compat.h  cpu-miner-opt.c  cpu-miner-opt.h  cpu-miner-work.c  cpu-miner-work.h  cpu-miner.c  miner.h  neoscrypt.c  neoscrypt.h  salsa_20_sidm.c  sha2.c  util-conversion.c  util-conversion.h  util.c
cpuminer-neoscrypt/: cpuminer-neoscrypt.sln  cpuminer-neoscrypt.vcxproj  cpuminer-neoscrypt.vcxproj.filters
